# ytguid

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.aiTodo/: base.txt  build.sh  daemon.txt  out.txt
.github/workflow/: build.yml
src/: main.cpp  server.cpp  server.hpp  wwwutils.cpp  wwwutils.hpp
www/: hello.html  opt.html  run.html
